--- a/aquisito_nomas.css
+++ b/aquisito_nomas.css
@@ -20,14 +20,13 @@ header{
     background-size: cover;
     background-position: center;
     height: 275px;
-    font-family: "Kablammo", serif;
 }
 
 header h1{
     text-align: center;
     font-size: 35px;
     color: #ffffff;
-    padding: 10px 0;
+    padding: 30px 0;
     text-shadow: 1px 1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0), -1px -1px 0 rgb(0, 0, 0);
     filter: drop-shadow(0px 7px 21px #000000);
 }
@@ -61,7 +60,7 @@ header h1{
     transition: .3s;
 }
 
-.contenedor .item:hover{
+.contenedor-items .item:hover{
     box-shadow: 0 0 10px #666;
     scale: 1.05;
 }
@@ -107,8 +106,6 @@ header h1{
     position: sticky !important;
     top: 0;
     transition: .3s;
-    margin-left: 20px;
-    width: 500px;
 }
 
 .carrito .header-carrito{
@@ -121,9 +118,9 @@ header h1{
 .carrito .carrito-item{
     display: flex;
     align-items: center;
+    position: relative;
     border-bottom: 1px solid #666;
     padding: 20px;
-    position: relative;
 }
 
 .carrito .carrito-item img{
@@ -190,12 +187,11 @@ header h1{
 
 .carrito .carrito-item .btn-eliminar i{
     pointer-events: none;
-    margin-top: 10px;
 }
 
 .carrito-total{
     background-color: white;
-    padding: 20px;
+    padding: 30px;
 }
 
 .carrito-total .fila{
@@ -211,7 +207,7 @@ header h1{
     display: block;
     width: 100%;
     border: none;
-    background-color: #000;
+    background: #000;
     color: #fff;
     border-radius: 5px;
     font-size: 18px;
