--- a/aquisito_nomas.css
+++ b/aquisito_nomas.css
@@ -71,7 +71,7 @@ header h1{
 
 .contenedor-items .item .titulo-item{
     display: block;
-    font-weight: bold;
+    font-size: 15px;
     text-align: center;
     text-transform: uppercase;
 }
