--- a/aquisito_nomas.css
+++ b/aquisito_nomas.css
@@ -56,7 +56,7 @@ header h1{
     margin: auto;
     border: 1px solid #666;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
     transition: .3s;
 }
 
@@ -71,6 +71,7 @@ header h1{
 
 .contenedor-items .item .titulo-item{
     display: block;
+    font-weight: bold;
     font-size: 15px;
     text-align: center;
     text-transform: uppercase;
@@ -129,7 +130,7 @@ header h1{
 
 .carrito .carrito-item .carrito-item-titulo{
     display: block;
-    font-weight: bold;
+    font-size: 15px;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
