--- a/aquisito_nomas.css
+++ b/aquisito_nomas.css
@@ -26,7 +26,7 @@ header h1{
     text-align: center;
     font-size: 35px;
     color: #ffffff;
-    padding: 30px 0;
+    padding: 10px 0;
     text-shadow: 1px 1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0), -1px -1px 0 rgb(0, 0, 0);
     filter: drop-shadow(0px 7px 21px #000000);
 }
@@ -60,7 +60,7 @@ header h1{
     transition: .3s;
 }
 
-.contenedor-items .item:hover{
+.contenedor .item:hover{
     box-shadow: 0 0 10px #666;
     scale: 1.05;
 }
@@ -71,7 +71,7 @@ header h1{
 
 .contenedor-items .item .titulo-item{
     display: block;
-    font-size: 19px;
+    font-size: 15px;
     text-align: center;
     text-transform: uppercase;
 }
@@ -117,11 +117,11 @@ header h1{
 }
 
 .carrito .carrito-item{
-    display: flex;
+    display: grid;
     align-items: center;
-    position: relative;
     border-bottom: 1px solid #666;
     padding: 20px;
+    position: relative;
 }
 
 .carrito .carrito-item img{
@@ -130,7 +130,7 @@ header h1{
 
 .carrito .carrito-item .carrito-item-titulo{
     display: block;
-    font-size: 15px;
+    font-weight: bold;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
@@ -188,11 +188,12 @@ header h1{
 
 .carrito .carrito-item .btn-eliminar i{
     pointer-events: none;
+    margin-top: 10px;
 }
 
 .carrito-total{
     background-color: white;
-    padding: 30px;
+    padding: 20px;
 }
 
 .carrito-total .fila{
@@ -208,7 +209,7 @@ header h1{
     display: block;
     width: 100%;
     border: none;
-    background: #000;
+    background-color: #000;
     color: #fff;
     border-radius: 5px;
     font-size: 18px;
@@ -319,6 +320,14 @@ p{
 
 .logosapp{
     text-align: center;
+}
+
+.footerlogos{
+    text-align: center;
+}
+
+.carrito-item{
+    display: inline-flex;
 }
 
 .footerlogos{
