--- a/aquisito_nomas.css
+++ b/aquisito_nomas.css
@@ -26,7 +26,7 @@ header h1{
     text-align: center;
     font-size: 35px;
     color: #ffffff;
-    padding: 10px 0;
+    padding: 30px 0;
     text-shadow: 1px 1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0), -1px -1px 0 rgb(0, 0, 0);
     filter: drop-shadow(0px 7px 21px #000000);
 }
@@ -60,7 +60,7 @@ header h1{
     transition: .3s;
 }
 
-.contenedor .item:hover{
+.contenedor-items .item:hover{
     box-shadow: 0 0 10px #666;
     scale: 1.05;
 }
@@ -71,7 +71,7 @@ header h1{
 
 .contenedor-items .item .titulo-item{
     display: block;
-    font-size: 15px;
+    font-size: 19px;
     text-align: center;
     text-transform: uppercase;
 }
@@ -107,6 +107,8 @@ header h1{
     top: 0;
     transition: .3s;
     width: 500px;
+    opacity: 0;
+    margin-right: -100%;
 }
 
 .carrito .header-carrito{
@@ -117,11 +119,11 @@ header h1{
 }
 
 .carrito .carrito-item{
-    display: grid;
+    display: flex;
     align-items: center;
+    position: relative;
     border-bottom: 1px solid #666;
     padding: 20px;
-    position: relative;
 }
 
 .carrito .carrito-item img{
@@ -130,7 +132,7 @@ header h1{
 
 .carrito .carrito-item .carrito-item-titulo{
     display: block;
-    font-weight: bold;
+    font-size: 15px;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
@@ -188,12 +190,11 @@ header h1{
 
 .carrito .carrito-item .btn-eliminar i{
     pointer-events: none;
-    margin-top: 10px;
 }
 
 .carrito-total{
     background-color: white;
-    padding: 20px;
+    padding: 30px;
 }
 
 .carrito-total .fila{
@@ -209,7 +210,7 @@ header h1{
     display: block;
     width: 100%;
     border: none;
-    background-color: #000;
+    background: #000;
     color: #fff;
     border-radius: 5px;
     font-size: 18px;
@@ -330,6 +331,9 @@ p{
     display: inline-flex;
 }
 
-.footerlogos{
-    text-align: center;
+p{
+    font-size: 15px;
+    font-style: oblique;
+    padding: 30px;
+    font-weight: bold;
 }
